[Terry N.] no longer required